# open-forward-LSTM

./: .gitignore  Cargo.toml  README.md
examples/: cifar10.rs  simple.rs
src/: lib.rs
