[package]
name = "oflstm"
version = "0.1.2"
authors = ["FlixCoder"]
edition = "2018"

[dependencies]
rand = "0.6.*"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
#rayon = "1.*"
esopt = { git = "https://github.com/FlixCoder/rust-es-optimizer.git" }
ofnn = { git = "https://github.com/FlixCoder/open-forward-NN.git" }

[features]
floats-f64 = []


[profile.dev]
opt-level = 3
lto = false
panic = "unwind"
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
debug = false
debug-assertions = false
